--- a/config/automations/charlie_presence_sound_machine.yaml
+++ b/config/automations/charlie_presence_sound_machine.yaml
@@ -1,17 +1,18 @@
 id: '1766003135892'
-alias: "Charlie Presence Sound Machine Reset"
-description: "Reset sound machine outlet when Charlie leaves - toggle off then back on"
+alias: "Charlie Departure"
+description: "Reset Charlie's room when he leaves - sound machine power cycle and lights off"
 mode: single
 
 triggers:
   - trigger: state
-    entity_id: input_boolean.charlie_s_presence
+    entity_id: input_boolean.charlie_presence
     to: "off"
     id: charlie_leaving
 
 conditions: []
 
 actions:
+  # Power cycle sound machine to reset it
   - action: switch.turn_off
     target:
       entity_id: switch.sound_machine_outlet
@@ -20,3 +21,7 @@ actions:
   - action: switch.turn_on
     target:
       entity_id: switch.sound_machine_outlet
+  # Turn off Nanoleaf shapes
+  - action: light.turn_off
+    target:
+      entity_id: light.charlie_s_shapes
