--- a/config/exposed_entities.yaml
+++ b/config/exposed_entities.yaml
@@ -38,7 +38,7 @@ script.tv_time: true
 script.winding_down: true
 
 # Helpers
-input_boolean.charlie_s_presence: true
+input_boolean.charlie_presence: true
 
 # Charlie presence scripts
 script.charlies_home: true
