--- a/config/automations/coffee_heating_alert.yaml
+++ b/config/automations/coffee_heating_alert.yaml
@@ -1,16 +1,25 @@
 id: "1766001131212"
-alias: Coffee heating alert
+alias: "Coffee Notification Reset"
 description: >-
-  Send an alert to phone when Ember mug temperature reaches 3 degrees below target temperature
+  Reset the coffee notification flag when mug becomes empty,
+  preparing for the next cup of coffee.
 triggers:
-  - trigger: template
-    value_template: >-
-      {{ states('sensor.ember_mug_e87720e9d7b9_current_temp') | float(0) >=
-          states('number.ember_mug_e87720e9d7b9_target_temp') | float(0) - 3 }}
+  - trigger: state
+    entity_id: sensor.ember_mug_e87720e9d7b9_state
+    to: "empty"
+  - trigger: state
+    entity_id: sensor.ember_mug_e87720e9d7b9_state
+    to: "standby"
+  - trigger: numeric_state
+    entity_id: sensor.ember_mug_e87720e9d7b9_liquid_level
+    below: 5
+conditions:
+  # Only reset if it was previously set (avoid unnecessary calls)
+  - condition: state
+    entity_id: input_boolean.coffee_ready_notified
+    state: "on"
 actions:
-  - action: notify.mobile_app_john_allens_iphone
-    data:
-      title: "Coffee Heating!"
-      message: >-
-        Your coffee is heating up! Current temp: {{ states('sensor.ember_mug_e87720e9d7b9_current_temp') | round(0) }}°F
-mode: restart
+  - action: input_boolean.turn_off
+    target:
+      entity_id: input_boolean.coffee_ready_notified
+mode: single
