--- a/config/automations/coffee_ready_alert.yaml
+++ b/config/automations/coffee_ready_alert.yaml
@@ -1,16 +1,56 @@
 id: "1765826628887"
-alias: Coffee ready alert
+alias: "Coffee Ready Zone Notification"
 description: >-
-  Send an alert to phone when Ember mug temperature reaches 3 degrees higher than target temperature
+  Notify once when coffee enters the drinkable zone (target ±3°F).
+  Uses input_boolean.coffee_ready_notified to prevent repeated alerts.
 triggers:
-  - trigger: template
+  # Trigger when cooling down into zone from above (hot coffee cooling)
+  - trigger: numeric_state
+    entity_id: sensor.ember_mug_e87720e9d7b9_current_temp
+    below: "{{ states('number.ember_mug_e87720e9d7b9_target_temp') | float + 3 }}"
+    id: cooling
+  # Trigger when heating up into zone from below (cold coffee warming)
+  - trigger: numeric_state
+    entity_id: sensor.ember_mug_e87720e9d7b9_current_temp
+    above: "{{ states('number.ember_mug_e87720e9d7b9_target_temp') | float - 3 }}"
+    id: heating
+conditions:
+  # Haven't already notified for this cup
+  - condition: state
+    entity_id: input_boolean.coffee_ready_notified
+    state: "off"
+  # Actually in the ±3°F zone (not just crossing one boundary)
+  - condition: template
     value_template: >-
-      {{ states('sensor.ember_mug_e87720e9d7b9_current_temp') | float(0) >=
-          states('number.ember_mug_e87720e9d7b9_target_temp') | float(0) + 3 }}
+      {% set current = states('sensor.ember_mug_e87720e9d7b9_current_temp') | float(0) %}
+      {% set target = states('number.ember_mug_e87720e9d7b9_target_temp') | float(0) %}
+      {{ (target - 3) <= current <= (target + 3) }}
+  # Must have liquid in the mug
+  - condition: numeric_state
+    entity_id: sensor.ember_mug_e87720e9d7b9_liquid_level
+    above: 10
+  # Mug must not be in empty/standby state
+  - condition: not
+    conditions:
+      - condition: state
+        entity_id: sensor.ember_mug_e87720e9d7b9_state
+        state: "empty"
+      - condition: state
+        entity_id: sensor.ember_mug_e87720e9d7b9_state
+        state: "standby"
 actions:
+  # Mark as notified first to prevent race conditions
+  - action: input_boolean.turn_on
+    target:
+      entity_id: input_boolean.coffee_ready_notified
+  # Send notification
   - action: notify.mobile_app_john_allens_iphone
     data:
-      title: "Coffee Ready!"
+      title: "☕ Coffee Ready!"
       message: >-
-        Your coffee is ready! Current temp: {{ states('sensor.ember_mug_e87720e9d7b9_current_temp') | round(0) }}°F
-mode: restart
+        {% if trigger.id == 'cooling' %}
+        Cooled to drinking temp ({{ states('sensor.ember_mug_e87720e9d7b9_current_temp') | round(0) }}°F)
+        {% else %}
+        Warmed to drinking temp ({{ states('sensor.ember_mug_e87720e9d7b9_current_temp') | round(0) }}°F)
+        {% endif %}
+mode: single
